FWCO-48: add non systemic workers by process.